feat: added navigation component

--- a/components/navigation/index.html
+++ b/components/navigation/index.html
@@ -13,9 +13,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/atom-one-dark-reasonable.min.css" integrity="sha512-RwXJS3k4Z0IK6TGoL3pgQlA9g2THFhKL7z9TYWdAI8u6xK0AUuMWieJuWgTRayywC9A94ifUj1RzjDa1NIlUIg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="card.css">
     <link rel="stylesheet" href="../../styles.css" />
-    <title>⚡ || Cards</title>
+    <link rel="stylesheet" href="navigation.css" />
+    <title>⚡ || Navigation</title>
   </head>
   <body>
     <header class="header">
@@ -47,110 +47,63 @@
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
-          <li class="list-item active"><a href="#">Card</a></li>
+          <li class="list-item"><a href="../card/index.html">Card</a></li>
           <li class="list-item"><a href="../image/index.html">Image</a></li>
           <li class="list-item"><a href="../input/index.html">Input</a></li>
           <li class="list-item"><a href="../list/index.html">List</a></li>
           <li class="list-item"><a href="../modal/index.html">Modal</a></li>
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
-          <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
+          <li class="list-item active"><a href="#">Navigation</a></li>
         </ul>
       </nav>
       <main class="main">
-        <h1 class="component-title">Card</h1>
+        <h1 class="component-title">Navigation</h1>
         <div class="line-break" ></div>
-        <p class="component-description">A card is a flexible and extensible content container. It includes options for headers and footers, a wide variety of content, contextual background colors, and powerful display options</p>
+        <p class="component-description">Navigation provides links to different pages and routes.</p>
 
-        <h2>Card With badges</h2>
         <div class="component-preview">
-          <div class="card card-badge">
-            <i class="fas fa-heart"></i>
-          </div>
-          <div class="card card-badge">
-            <i class="fas fa-thumbs-up"></i>
-          </div>
-        </div>
-        <pre class="codebox">
-          <code>
-            &lt;div class="card card-badge">
-              &lt;i class="fas fa-heart">&lt;/i>
-            &lt;/div>
-
-            &lt;div class="card card-badge">
-              &lt;i class="fas fa-thumbs-up">&lt;/i>
-            &lt;/div>
-          </code>
-        </pre>
-
-        <h2>Card with dismiss</h2>
-        <div class="component-preview">
-          <div class="card card-dismiss">
-            <i class="fas fa-times"></i>
-          </div>
-        </div>
-        <pre class="codebox">
-          <code>
-            &lt;div class="card card-dismiss">
-              &lt;i class="fas fa-times">&lt;/i>
-            &lt;/div>
-          </code>
-        </pre>
-
-        <h2>Vertical/Horizontal Cards</h2>
-        <div class="component-preview">
-          <div class="card card-vertical">
-            <p>VERTICAL CARD</p>
-          </div>
-          <div class="card card-horizontal">
-            <p>HORIZONTAL CARD</p>
-          </div>
-        </div>
-        <pre class="codebox">
-          <code>
-            &lt;div class="card card-vertical">
-              &lt;p>VERTICAL CARD&lt;/p>
-            &lt;/div>
-
-            &lt;div class="card card-horizontal">
-              &lt;p>HORIZONTAL CARD&lt;/p>
-            &lt;/div>
-          </code>
-        </pre>
-
-        <h2>Card w/Shadows</h2>
-        <div class="component-preview">
-          <div class="card card-shadow">
-            <p>CARD</p>
-          </div>
-        </div>
-        <pre class="codebox">
-          <code>
-            &lt;div class="card card-shadow">
-              &lt;p>CARD&lt;/p>
-            &lt;/div>
-          </code>
-        </pre>
-        
-
-        <h2>Card w/Text Overlay</h2>
-        <div class="component-preview">
-          <div class="card card-overlay">
-            <div class="overlay">
-              <div class="overlay-text">
-                <h3>Overylayed Text</h3>       
-              </div>
+          <div class="navigation">
+            <div class="nav__left">
+              <span class="icon">
+                <i class="fas fa-bars"></i>
+              </span>
+              <h2>San Francisco, CA</h2>
             </div>
+            <nav class="nav__right">
+              <span class="icon">
+                <i class="fas fa-download"></i>
+              </span>
+              <span class="icon">
+                <i class="fas fa-print"></i>
+              </span>
+              <span class="icon">
+                <i class="fas fa-bookmark"></i>
+              </span>
+            </nav>
           </div>
         </div>
+
         <pre class="codebox">
           <code>
-            &lt;div class="card card-overlay">
-              &lt;div class="overlay">
-                &lt;div class="overlay-text">
-                  &lt;h3>Overylayed Text&lt;/h3>       
-                &lt;/div>
+            &lt;div class="navigation">
+              &lt;div class="nav__left">
+                &lt;span class="icon">
+                  &lt;i class="fas fa-bars">&lt;/i>
+                &lt;/span>
+                &lt;h2>San Francisco, CA&lt;/h2>
               &lt;/div>
+              &lt;nav class="nav__right">
+                &lt;span class="icon">
+                  &lt;i class="fas fa-download">&lt;/i>
+                &lt;/span>
+                &lt;span class="icon">
+                  &lt;i class="fas fa-print">&lt;/i>
+                &lt;/span>
+                &lt;span class="icon">
+                  &lt;i class="fas fa-bookmark">&lt;/i>
+                &lt;/span>
+              &lt;/nav>
             &lt;/div>
           </code>
         </pre>
