--- a/components/badge/index.html
+++ b/components/badge/index.html
@@ -52,6 +52,7 @@
           <li class="list-item"><a href="../modal/index.html">Modal</a></li>
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
+          <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
         </ul>
       </nav>
       <main class="main">
