--- a/components/text utilities/index.html
+++ b/components/text utilities/index.html
@@ -52,6 +52,7 @@
           <li class="list-item"><a href="../modal/index.html">Modal</a></li>
           <li class="list-item active"><a href="#">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
+          <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
         </ul>
       </nav>
       <main class="main">
