feat: added rating component

--- a/components/snackbar/index.html
+++ b/components/snackbar/index.html
@@ -53,6 +53,7 @@
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
           <li class="list-item active"><a href="#">Snackbar</a></li>
           <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
+          <li class="list-item"><a href="../rating/index.html">Rating</a></li>
         </ul>
       </nav>
       <main class="main">
