--- a/components/text utilities/index.html
+++ b/components/text utilities/index.html
@@ -53,6 +53,7 @@
           <li class="list-item active"><a href="#">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
+          <li class="list-item"><a href="../rating/index.html">Rating</a></li>
         </ul>
       </nav>
       <main class="main">
