--- a/components/modal/index.html
+++ b/components/modal/index.html
@@ -56,6 +56,7 @@
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
+          <li class="list-item"><a href="../rating/index.html">Rating</a></li>
         </ul>
       </nav>
       <main class="main">
