--- a/components/navigation/index.html
+++ b/components/navigation/index.html
@@ -55,6 +55,7 @@
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item active"><a href="#">Navigation</a></li>
+          <li class="list-item"><a href="../rating/index.html">Rating</a></li>
         </ul>
       </nav>
       <main class="main">
