--- a/components/rating/index.html
+++ b/components/rating/index.html
@@ -12,8 +12,8 @@
     />
     
     <link rel="stylesheet" href="../../styles.css" />
-    <link rel="stylesheet" href="avatar.css" />
-    <title>⚡ || Avatar</title>
+    <link rel="stylesheet" href="rating.css" />
+    <title>⚡ || Rating</title>
   </head>
   <body>
     <header class="header">
@@ -41,7 +41,7 @@
             <i class="far fa-times"></i>
           </div>
           <h3>Components</h3>
-          <li class="list-item active"><a href="#">Avatar</a></li>
+          <li class="list-item"><a href="../avatars/index.html">Avatar</a></li>
           <li class="list-item"><a href="../button/index.html">Button</a></li>
           <li class="list-item"><a href="../badge/index.html">Badge</a></li>
           <li class="list-item"><a href="../alert/index.html">Alert</a></li>
@@ -53,44 +53,22 @@
           <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
-          <li class="list-item"><a href="../rating/index.html">Rating</a></li>
+          <li class="list-item active"><a href="#">Rating</a></li>
         </ul>
       </nav>
       <main class="main">
-        <h1 class="component-title">Avatar</h1>
+        <h1 class="component-title">Rating</h1>
         <div class="line-break" ></div>
-        <p class="component-description">The Avatar component is used to represent a user, and displays the profile picture, initials or fallback icon.</p>
+        <p class="component-description">Ratings provide insight regarding others' opinions and experiences, and can allow the user to submit a rating of their own.</p>
 
         <div class="component-preview">
-          <img
-            class="avatar avatar-s"
-            src="../../images/avatar1.png" 
-            alt="avatar"
-          >
-
-          <img
-            class="avatar avatar-m"
-            src="../../images/avatar2.jpg" 
-            alt="avatar"
-          >
-
-          <img
-            class="avatar avatar-l"
-            src="../../images/avatar3.jpg" 
-            alt="avatar"
-          >
-
-          <img
-            class="avatar avatar-xl"
-            src="../../images/avatar4.jpg" 
-            alt="avatar"
-          >
-
-          <img
-            class="avatar avatar-2xl"
-            src="../../images/avatar5.jpg" 
-            alt="avatar"
-          >
+          <div class="rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
         </div>
 
         <div class="code-box">
@@ -98,80 +76,82 @@
           <div class="code">
               <div class="line1">
                   <span class="sym"><</span>
-                  <span class="element">image </span>
+                  <span class="element">div </span>
                   <span class="attribute">class</span>
                   <span class="sym">=</span>
-                  <span class="attr-content">"avatar avatar-s" </span>
-                  <span class="attribute">src</span>
-                  <span class="sym">=</span>
-                  <span class="attr-content">"https://pin.it/6EPHvdt" </span>
-                  <span class="attribute">alt</span>
-                  <span class="sym">=</span>
-                  <span class="attr-content">"avatar" </span>
+                  <span class="attr-content">"rating" </span>
                   <span class="sym">></span>
               </div>
           </div>
           <div class="code">
-            <div class="line1">
+            <div class="line2">
               <span class="sym"><</span>
-              <span class="element">image </span>
+              <span class="element">i </span>
               <span class="attribute">class</span>
               <span class="sym">=</span>
-              <span class="attr-content">"avatar avatar-m" </span>
-              <span class="attribute">src</span>
+              <span class="attr-content">"fas fa-star" </span>
+              <span class="sym">></span>
+              <span class="sym"><</span>
+              <span class="element">/i</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line2">
+              <span class="sym"><</span>
+              <span class="element">i </span>
+              <span class="attribute">class</span>
               <span class="sym">=</span>
-              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
-              <span class="attribute">alt</span>
+              <span class="attr-content">"fas fa-star" </span>
+              <span class="sym">></span>
+              <span class="sym"><</span>
+              <span class="element">/i</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line2">
+              <span class="sym"><</span>
+              <span class="element">i </span>
+              <span class="attribute">class</span>
               <span class="sym">=</span>
-              <span class="attr-content">"avatar" </span>
+              <span class="attr-content">"fas fa-star" </span>
+              <span class="sym">></span>
+              <span class="sym"><</span>
+              <span class="element">/i</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line2">
+              <span class="sym"><</span>
+              <span class="element">i </span>
+              <span class="attribute">class</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"fas fa-star" </span>
+              <span class="sym">></span>
+              <span class="sym"><</span>
+              <span class="element">/i</span>
+              <span class="sym">></span>
+            </div>
+          </div>
+          <div class="code">
+            <div class="line2">
+              <span class="sym"><</span>
+              <span class="element">i </span>
+              <span class="attribute">class</span>
+              <span class="sym">=</span>
+              <span class="attr-content">"fas fa-star" </span>
+              <span class="sym">></span>
+              <span class="sym"><</span>
+              <span class="element">/i</span>
               <span class="sym">></span>
             </div>
           </div>
           <div class="code">
             <div class="line1">
               <span class="sym"><</span>
-              <span class="element">image </span>
-              <span class="attribute">class</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"avatar avatar-l" </span>
-              <span class="attribute">src</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
-              <span class="attribute">alt</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"avatar" </span>
-              <span class="sym">></span>
-            </div>
-          </div>
-          <div class="code">
-            <div class="line1">
-              <span class="sym"><</span>
-              <span class="element">image </span>
-              <span class="attribute">class</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"avatar avatar-xl" </span>
-              <span class="attribute">src</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
-              <span class="attribute">alt</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"avatar" </span>
-              <span class="sym">></span>
-            </div>
-          </div>
-          <div class="code">
-            <div class="line1">
-              <span class="sym"><</span>
-              <span class="element">image </span>
-              <span class="attribute">class</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"avatar avatar-2xl" </span>
-              <span class="attribute">src</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"https://pin.it/6EPHvdt" </span>
-              <span class="attribute">alt</span>
-              <span class="sym">=</span>
-              <span class="attr-content">"avatar" </span>
+              <span class="element">/div</span>
               <span class="sym">></span>
             </div>
           </div>
