--- a/components/navigation/index.html
+++ b/components/navigation/index.html
@@ -56,6 +56,7 @@
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item active"><a href="#">Navigation</a></li>
           <li class="list-item"><a href="../rating/index.html">Rating</a></li>
+          <li class="list-item"><a href="../grid/index.html">Grid</a></li>
         </ul>
       </nav>
       <main class="main">
