--- a/components/text utilities/index.html
+++ b/components/text utilities/index.html
@@ -54,6 +54,7 @@
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
           <li class="list-item"><a href="../rating/index.html">Rating</a></li>
+          <li class="list-item"><a href="../grid/index.html">Grid</a></li>
         </ul>
       </nav>
       <main class="main">
