--- a/components/card/index.html
+++ b/components/card/index.html
@@ -52,7 +52,7 @@
           <li class="list-item"><a href="../input/index.html">Input</a></li>
           <li class="list-item"><a href="../list/index.html">List</a></li>
           <li class="list-item"><a href="../modal/index.html">Modal</a></li>
-          <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
+          <li class="list-item"><a href="../text-utilities/index.html">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
           <li class="list-item"><a href="../rating/index.html">Rating</a></li>
