--- a/components/modal/index.html
+++ b/components/modal/index.html
@@ -53,7 +53,7 @@
           <li class="list-item"><a href="../input/index.html">Input</a></li>
           <li class="list-item"><a href="../list/index.html">List</a></li>
           <li class="list-item active"><a href="#">Modal</a></li>
-          <li class="list-item"><a href="../text utilities/index.html">Text Utilities</a></li>
+          <li class="list-item"><a href="../text-utilities/index.html">Text Utilities</a></li>
           <li class="list-item"><a href="../snackbar/index.html">Snackbar</a></li>
           <li class="list-item"><a href="../navigation/index.html">Navigation</a></li>
           <li class="list-item"><a href="../rating/index.html">Rating</a></li>
