--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
+
+:root {
+  --white: #fff;
+  --gray: gray;
+  --code-box-bg: #011627;
+  --code-preview-1: pink;
+  --code-preview-2: #a2ffda;
+  --code-preview-3: #84ebf7;
+  --code-preview-4: #54a7ff;
+  --code-preview-5: #faa448;
+  --code-preview-6: rgb(24, 165, 158);
+}
 /* ----------------------------RESET CSS--------------------- */
 * {
   box-sizing: border-box;
@@ -14,7 +26,7 @@ html {
 /*--------------- Scrollbar ------------------ */
 
 ::-webkit-scrollbar {
-  width: .5em;
+  width: 0.5em;
 }
 
 ::-webkit-scrollbar-track {
@@ -22,14 +34,13 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+  background-color: var(--gray);
+  outline: 1px solid var(--gray);
 }
-
 
 /* -------------------COMMON---------------------------------- */
 a {
-  color: #fff;
+  color: var(--white);
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -40,7 +51,7 @@ li {
 
 .line-break {
   height: 0.0625rem;
-  background-color: gray;
+  background-color: var(--gray);
 }
 
 /* --------------------------HEADER--------------------------------- */
@@ -95,7 +106,7 @@ li {
 .container {
   width: 100vw;
   display: flex;
-  background-color: #fff;
+  background-color: var(--white);
 }
 
 /* ------------------------------NAVBAR---------------------------- */
@@ -152,7 +163,7 @@ li {
 .main {
   flex-grow: 1;
   margin: 1.25rem 1rem;
-  box-shadow: 1px 1px 15px 0 #ccc;
+  box-shadow: 1px 1px 15px 0 var(--gray);
   padding: 1.5rem 2rem;
 }
 
@@ -169,7 +180,7 @@ li {
 .component-preview {
   width: 100%;
   margin: 2rem;
-  border: 1px solid gray;
+  border: 1px solid var(--gray);
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -199,7 +210,7 @@ pre code.hljs {
 }
 
 .code-box {
-  background: #011627;
+  background: var(--code-box-bg);
   padding: 1rem 1rem;
   border-radius: 10px;
   margin: 1.5rem auto;
@@ -208,7 +219,7 @@ pre code.hljs {
   display: flex;
   flex-direction: column;
   gap: 7px;
-  color: pink;
+  color: var(--code-preview-1);
 }
 
 .code {
@@ -238,27 +249,23 @@ pre code.hljs {
 }
 
 .content {
-  color: #fff;
+  color: var(--white);
 }
 
 .sym {
-  color: #a2ffda;
+  color: var(--code-preview-2);
 }
 
 .element {
-  color: #84ebf7;
+  color: var(--code-preview-3);
 }
 
 .attribute {
-  color: #54a7ff;
+  color: var(--code-preview-4);
 }
 
 .attr-content {
-  color: #faa448;
-}
-
-.comment {
-  color: rgb(24, 165, 158);
+  color: var(--code-preview-1);
 }
 
 @media only screen and (max-width: 1000px) {
